force-app/main/default/objects/FreeeInvoiceContractRule__c/FreeeInvoiceContractRule__c.object-meta.xml
<CustomObject>
    <description>freee請求取込時に、取引先・商品・件名から既存契約を特定し、承認済みの場合のみ契約管理を自動作成するためのルール。</description>
    <label>Freee請求契約ルール</label>
    <nameField>
        <label>ルール名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Freee請求契約ルール</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>