force-app/main/default/objects/FreeeInvoiceContractRule__c/fields/AutoCreateAllowed__c.field-meta.xml
<CustomField>
    <fullName>AutoCreateAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>契約管理が存在しない場合に、契約・契約期間・契約月次明細を自動作成することを承認する。</description>
    <label>契約自動作成を許可</label>
    <type>Checkbox</type>
</CustomField>