force-app/main/default/objects/FreeeInvoiceContractRule__c/fields/BillingCycle__c.field-meta.xml
<CustomField>
    <fullName>BillingCycle__c</fullName>
    <label>請求区分</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>月払い</label>
            </value>
            <value>
                <fullName>Yearly</fullName>
                <label>年払い</label>
            </value>
            <value>
                <fullName>OneTime</fullName>
                <label>単発</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>