force-app/main/default/objects/FreeeInvoiceContractRule__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約管理</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Freee請求契約ルール</relationshipLabel>
    <relationshipName>FreeeInvoiceContractRules</relationshipName>
    <type>Lookup</type>
</CustomField>