force-app/main/default/objects/FreeeInvoiceContractRule__c/fields/ContractName__c.field-meta.xml
<CustomField>
    <fullName>ContractName__c</fullName>
    <label>自動作成契約名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>