force-app/main/default/objects/FreeeInvoiceContractRule__c/fields/ProductMaster__c.field-meta.xml
<CustomField>
    <fullName>ProductMaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>商品マスタ</label>
    <referenceTo>ProductMaster__c</referenceTo>
    <relationshipLabel>Freee請求契約ルール</relationshipLabel>
    <relationshipName>FreeeInvoiceContractRules</relationshipName>
    <type>Lookup</type>
</CustomField>