force-app/main/default/objects/FreeeInvoiceContractRule__c/fields/SubjectKeyword__c.field-meta.xml
<CustomField>
    <fullName>SubjectKeyword__c</fullName>
    <label>請求件名キーワード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>