force-app/main/default/objects/FreeeInvoiceContractRule__c/validationRules/ActiveCommonRuleRequiresAutoCreate.validationRule-meta.xml
<ValidationRule>
    <fullName>ActiveCommonRuleRequiresAutoCreate</fullName>
    <active>true</active>
    <description>共通ルールは既存契約を直接指定できないため、有効化時に契約自動作成を必須にする。</description>
    <errorConditionFormula>AND(IsActive__c, ISBLANK(Account__c), NOT(AutoCreateAllowed__c))</errorConditionFormula>
    <errorDisplayField>AutoCreateAllowed__c</errorDisplayField>
    <errorMessage>有効な共通ルールでは「契約自動作成を許可」を選択してください。</errorMessage>
</ValidationRule>