force-app/main/default/objects/FreeeInvoiceContractRule__c/listViews/AccountSpecificRules.listView-meta.xml
<ListView>
    <fullName>AccountSpecificRules</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ProductMaster__c</columns>
    <columns>BillingCycle__c</columns>
    <columns>Contract__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>notEqual</operation>
        <value></value>
    </filters>
    <label>取引先別例外ルール</label>
</ListView>