force-app/main/default/objects/FreeeInvoiceContractRule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ProductMaster__c</columns>
    <columns>BillingCycle__c</columns>
    <columns>Contract__c</columns>
    <columns>AutoCreateAllowed__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて</label>
</ListView>