force-app/main/default/objects/FreeeInvoiceContractRule__c/listViews/CommonRules.listView-meta.xml
<ListView>
    <fullName>CommonRules</fullName>
    <columns>NAME</columns>
    <columns>ProductMaster__c</columns>
    <columns>BillingCycle__c</columns>
    <columns>SubjectKeyword__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value></value>
    </filters>
    <label>商品共通ルール</label>
</ListView>